--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
-    "presets": [
+    "presets" : [
         ["env", {
-            "targets": {
-                "browsers": [
-                    "last 5 versions",
-                    "ie >= 8"
+            "targets" : {
+                "browsers" : [
+                    "last 5 versions"
                 ]
             }
         }]
